- [DS-550] Upgrade to latest Google Analytics tracking code
- [DS-632] Batch Metadata Import needs to validate metadata fields specified in CSVs
- [DS-646] Remove /bin scripts (replaced by 'dspace' command)

[Graham Triggs]
- [DS-698] Clear primary_bitstream_id references when deleting a bitstream
- [DS-696] Reduce cost of browse index pruning

(Ben Bosman)
- [DS-703] Making the OAI max amount of records configurable
- [DS-603] Including a most used item list on the home page
- [DS-615] Optimize solr performance with solr.optimize and autocommit
- [DS-706] Alternative to dri2xhtml, with the goal to be more developer-friendly

1.6.2
=====

(Tim Donohue, Kim Shepherd, Keith Gilbertson, Stuart Lewis)
- [DS-584] start-handle-server script broken - Error in launcher.xml: Invalid class name

(Stuart Lewis)
- [DS-607] Invalid identifiers not escaped
- [DS-608] Batch metadata import missing item headers

(Ivan Masar, Claudia Juergen)
- [DS-567] Czech localization of 1.6.0
- [DS-595] Czech localization of 1.6.1

1.6.1
=====

(Mark Diggory)
- [DS-571] Upgrade DSpace Services to next release 2.0.1

(Dale Poulter)
- [DS-557] LC Authority Names - Lookup Feature - names w/o dates

(Paulo Jobim)
- [DS-471] Accessing site-level 'mets.xml' in XMLUI doesn't work properly for handle prefixes with periods (e.g. 2010.1)

(Yin Yin Latt)
- [DS-565] Empty description column in Itemview Page - General-Handler.xsl
- [DS-566] Side bar menu dropping when there is license text in collection - DIM-Handler.xsl

(Robin Taylor)
- [DS-497] Date month and day get default values when user returns to describe form
- [DS-501] Change kubrick.xsl to check for the presence of a day and month before displaying them

(Keiji Suzuki)
- [DS-537] Malformed Japanese option values in the authority lookup window

(Peter Dietz)
- [DS-509] SOLR returns ArrayIndexOutOfBounds with non-existent country code OR when there is no view/download data