@@ -54,6 +54,7 @@
 [Graham Triggs]
 - [DS-698] Clear primary_bitstream_id references when deleting a bitstream
 - [DS-696] Reduce cost of browse index pruning
+- [DS-694] Add inner class to Item for more efficient metadata handling
 
 (Ben Bosman)
 - [DS-703] Making the OAI max amount of records configurable
